--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "java.project.sourcePaths": ["src/main/java"]
+    "java.project.sourcePaths": [
+        "src/main/java"
+    ],
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
