--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "WelcomeScreen",
+            "request": "launch",
+            "mainClass": "com.materialsystem.viewwindow.WelcomeScreen",
+            "projectName": "materialsystem"
+        },
+        {
+            "type": "java",
             "name": "Main",
             "request": "launch",
             "mainClass": "com.materialsystem.Main",
